--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="no_place_selected">No place selected.</string>
     <string name="you_picked">You picked</string>
     <string name="no_friends_selected">No friends selected.</string>
+    <string name="app_id">1025327997496499</string>
 
 </resources>
