--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
     <!-- Tabs -->
     <string name="app_name">OnTheFly</string>
 
-	<!-- Action bar -->
-	<string name="app_name" id="@+id/styled_welcome_message">OnThe<b>Fly</b></string>
+    <!-- Action bar -->
+    <string id="@+id/styled_welcome_message" name="app_name">OnThe<b>Fly</b></string>
     <string name="action_settings">Settings</string>
     <string name="action_map">map</string>
 
@@ -16,14 +15,14 @@
     <string name="tab_people">PEOPLE</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="hello_world">Hello world!</string>
-    
-    <!--  General Strings -->
+
+    <!-- General Strings -->
     <string name="ok">OK</string>
     <string name="error">Error!</string>
     <string name="success">Success!</string>
     <string name="cancelled">Cancelled</string>
     <string name="permission_not_granted">Permission not granted.</string>
-    
+
     <!-- Facebook Strings -->
     <string name="successfully_posted_post">Post successfully posted!</string>
     <string name="status_update">I am also using OnTheFly!</string>
@@ -32,5 +31,8 @@
     <string name="you_picked">You picked</string>
     <string name="no_friends_selected">No friends selected.</string>
     <string name="app_id">1025327997496499</string>
+    <string name="title_activity_map">MapActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 
 </resources>
